fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -1849,6 +1849,9 @@ section {
         
     }
 
+    .section-construction-progress-card button {
+        max-width: 5.2rem !important;
+    }
     
 }
 
@@ -2140,6 +2143,7 @@ section {
     }
 
     /* section construction progress */
+
     .section-construction-progress-container {
         grid-template-columns: 1fr 1fr 1fr !important;
     }
@@ -2160,6 +2164,8 @@ section {
         font-size: 0.7rem;
         text-wrap: nowrap;
     }
+
+    
 
 
     /*section stock */
@@ -2529,6 +2535,10 @@ section {
         display: none !important;
     }
 
+    .section-construction-progress-card div {
+        overflow: visible !important;
+    }
+
     
     /*section stock */
 
@@ -2651,7 +2661,6 @@ body {
 
 .section-construction-progress {
     margin-top: 7rem;
-    overflow: hidden;
 }
 
 .section-construction-progress-container {
@@ -2659,13 +2668,25 @@ body {
     grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 2rem;
     margin-top: 2rem;
-    overflow-x: auto;
-    width: 100%;
 }
 
 .section-construction-progress-card {
     display: grid;
     gap: 1rem;
+}
+
+.section-construction-progress-card div > img {
+    max-width: 18rem;
+    overflow: hidden;
+}
+
+.section-construction-progress-card  button img {
+    max-width: 20rem;
+    overflow: hidden;
+}
+
+.section-construction-progress-card  button span {
+    text-wrap: nowrap;
 }
 
 .section-construction-progress-card div:nth-of-type(2) {
@@ -2684,10 +2705,16 @@ body {
     color: white;
     padding: 0 0.7rem;
     cursor: pointer;
+    overflow: hidden;
+    max-width: 6rem;
+}
+
+.section-construction-progress-card div {
+    overflow: hidden;
 }
 
 .section-construction-progress-card p, span {
-    font-size: 14px;
+    font-size: 1.5vmin + 1rem;
     font-weight: 400;
     line-height: 17px;
     letter-spacing: 0em;
